<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:paddingStart="@dimen/layout_padding"
        android:paddingTop="@dimen/layout_padding">

        <Spinner
            android:id="@+id/mode_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/spinner_margin_bottom" />

        <TextView
            android:id="@+id/tv_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_mass"
            android:layout_below="@id/mode_spinner"
            android:minWidth="@dimen/label_minWidth"
            android:text='@string/mass' />


        <EditText
            android:id="@+id/et_mass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mode_spinner"
            android:layout_margin="@dimen/edittext_margin"
            android:layout_toEndOf="@id/tv_mass"
            android:layout_toStartOf="@+id/tv_mass_mode"
            android:hint="@string/mass_kg_range"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tv_mass_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/et_mass"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/unit_marginStartEnd"
            android:layout_marginStart="@dimen/unit_marginStartEnd"
            android:minWidth="@dimen/label_minWidth"
            android:text="@string/kg" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_height"
            android:layout_alignParentStart="true"
            android:minWidth="@dimen/label_minWidth"
            android:text='@string/height' />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_mass"
            android:layout_margin="@dimen/edittext_margin"
            android:layout_toEndOf="@id/tv_height"
            android:layout_toStartOf="@+id/tv_height_mode"
            android:hint="@string/height_cm_range"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tv_height_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/et_height"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/unit_marginStartEnd"
            android:layout_marginStart="@dimen/unit_marginStartEnd"
            android:minWidth="@dimen/label_minWidth"
            android:text="@string/cm" />

        <Button
            android:id="@+id/btn_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_height"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/count" />

        <ImageButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_count"
            android:layout_margin="@dimen/button_margin"
            android:layout_toEndOf="@+id/btn_count"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save"
            android:visibility="invisible"
            android:src="@drawable/ic_save_black_36dp" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_count"
            android:layout_margin="@dimen/button_margin"
            android:layout_toEndOf="@id/btn_save"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share_black_36dp" />

        <TextView
            android:id="@+id/tv_bmi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_count"
            android:layout_centerHorizontal="true"
            android:text='@string/bmi'
            android:textSize="@dimen/BMI_textSize"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_bmi_text"
            android:layout_centerHorizontal="true"
            android:text='@string/result_placeholder'
            android:textSize="@dimen/BMI_number_textSize"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_bmi_opinion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_bmi_result"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/BMI_opinion_marginTop"
            android:text=''
            android:textAlignment="center"
            android:textSize="@dimen/BMI_opinion_textSize"
            android:visibility="invisible" />

    </RelativeLayout>
</ScrollView>